; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_power_meter.c_show_avg_interval.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_power_meter.c_show_avg_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.acpi_device = type { %struct.acpi_power_meter_resource* }
%struct.acpi_power_meter_resource = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"%llu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @show_avg_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_avg_interval(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.acpi_device*, align 8
  %8 = alloca %struct.acpi_power_meter_resource*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.acpi_device* @to_acpi_device(%struct.device* %9)
  store %struct.acpi_device* %10, %struct.acpi_device** %7, align 8
  %11 = load %struct.acpi_device*, %struct.acpi_device** %7, align 8
  %12 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %11, i32 0, i32 0
  %13 = load %struct.acpi_power_meter_resource*, %struct.acpi_power_meter_resource** %12, align 8
  store %struct.acpi_power_meter_resource* %13, %struct.acpi_power_meter_resource** %8, align 8
  %14 = load %struct.acpi_power_meter_resource*, %struct.acpi_power_meter_resource** %8, align 8
  %15 = getelementptr inbounds %struct.acpi_power_meter_resource, %struct.acpi_power_meter_resource* %14, i32 0, i32 1
  %16 = call i32 @mutex_lock(i32* %15)
  %17 = load %struct.acpi_power_meter_resource*, %struct.acpi_power_meter_resource** %8, align 8
  %18 = call i32 @update_avg_interval(%struct.acpi_power_meter_resource* %17)
  %19 = load %struct.acpi_power_meter_resource*, %struct.acpi_power_meter_resource** %8, align 8
  %20 = getelementptr inbounds %struct.acpi_power_meter_resource, %struct.acpi_power_meter_resource* %19, i32 0, i32 1
  %21 = call i32 @mutex_unlock(i32* %20)
  %22 = load i8*, i8** %6, align 8
  %23 = load %struct.acpi_power_meter_resource*, %struct.acpi_power_meter_resource** %8, align 8
  %24 = getelementptr inbounds %struct.acpi_power_meter_resource, %struct.acpi_power_meter_resource* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @sprintf(i8* %22, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %25)
  ret i32 %26
}

declare dso_local %struct.acpi_device* @to_acpi_device(%struct.device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @update_avg_interval(%struct.acpi_power_meter_resource*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
